# Reflex-Adapt

./: .gitignore  Joy1.cpp  Makefile  Pce.h  Psx_guncon.h  Psx_negcon.h  README.md  Reflex.ino  Threedo.h  platformio.ini
Reflex/: GameCube.h  Input_3do.h  Input_GameCube.h  Input_Jaguar.h  Input_N64.h  Input_NeoGeo.h  Input_Pce.h  Input_Psx.h  Input_Psx_Guncon.h  Input_Psx_Jogcon.h  Input_Psx_Negcon.h  Input_Saturn.h  Input_Sms.h  Input_Snes.h  Input_SportsPad.h  Input_Wii.h  Jaguar.h  LUFADriver.c  LUFADriver.h  N64.h  N64.new  N64_new.h  N64_old.h  NeoGeo.h  Pce.h  Psx.h  Psx.old  Psx_guncon.h  Psx_guncon.h_  Psx_jogcon.h  Psx_negcon.h  RZInputModule.cpp  RZInputModule.h  Reflex.ino  ReflexMPG.ino  ReflexPad5x7.h  Saturn.h  Shared.h  Snes.bkp  Snes.h  (+2 more)
ReflexMPG/: Input_GameCube.h  Input_Jaguar.h  Input_N64.h  Input_Pce.h  Input_Psx.h  Input_Saturn.h  Input_Wii.h  LUFAConfig.h  ReflexMPG.ino  Shared.h
arduino/: cli-config.yaml
docs/: NOTICE.md  architecture.md
firmware/: firmware.cpp  firmware_build_info.h  firmware_platform_config.h  product_config.h  product_display_identity.h
mister/: .gitignore  README.md  generate_repo.py  generate_repo.sh  go.mod  go.sum  main.go
reflex_updater/: Cargo.toml
reflex_updater/src/: avr910.rs  main.rs  page_map.rs  ports.rs
release_files/: manifest.txt
tools/: audit_classic2usb_release.py  flash_adapt.py  package_release.py  pio_hooks.py  release_targets.json  render_manual_pdf.py  run_release_checks.py  test_adapt_manager.py  test_auto_input_usb_identity.py  test_classic2usb_source_guards.py  test_release_integrity.py
(+1207 files in other folders)
